# cs3210-rustos-public

./: .gitignore  README.md
boot/: Cargo.toml  Makefile  build.rs  qemu.sh
boot/src/: main.rs
doc/: MP-startup-for-arm.docx
ext/: .gitignore
ext/fat32-imgs/: ebpb1.img  ebpb2.img  mbr.img
ext/fat32-imgs/hashes/: all-entries-1  all-entries-2  all-entries-3  all-entries-4  file-pi  files-1  files-2-3-4  root-entries-1  root-entries-2  root-entries-3  root-entries-4
ext/rpi3-debug/: rpi3.cfg
ext/rpi3-gpio16/: kernel8.img
ext/rpi3-led/: kernel8.img  start.elf
ext/rpi3-uart/: config.txt  kernel8.img
ext/uspi/: Rules.mk
ext/uspi/env/include/uspienv/: synchronize.h  timer.h
ext/uspi/env/lib/: Makefile  assert.c  timer.c  uspibind.c
ext/uspi/include/: uspi.h
ext/uspi/include/uspi/: usbendpoint.h
ext/uspi/lib/: dwhcidevice.c  dwhcirootport.c  smsc951x.c  usbdevice.c  usbendpoint.c  usbrequest.c  uspilibrary.c
kern/: Cargo.toml  Makefile  build.rs
kern/.cargo/: config  layout.ld
kern/src/: allocator.rs  console.rs  fs.rs  init.rs  logger.rs  main.rs  mutex.rs  net.rs  param.rs  percore.rs  process.rs  shell.rs  traps.rs  vm.rs
kern/src/allocator/: bin.rs  bump.rs  linked_list.rs  tests.rs  util.rs
kern/src/fs/: sd.rs
kern/src/init/: init.s  oom.rs  vectors.s
kern/src/net/: uspi.rs
kern/src/process/: process.rs  scheduler.rs  stack.rs  state.rs
kern/src/traps/: frame.rs  irq.rs  syndrome.rs  syscall.rs
kern/src/vm/: address.rs  pagetable.rs
lib/aarch64/: Cargo.toml
lib/aarch64/.cargo/: config
lib/aarch64/src/: asm.rs  lib.rs  macros.rs  regs.rs  sp.rs  vmsa.rs
lib/fat32/: Cargo.toml
lib/fat32/src/: lib.rs  mbr.rs  tests.rs  util.rs
lib/fat32/src/traits/: block_device.rs  dummy.rs  fs.rs  metadata.rs  mod.rs
lib/fat32/src/vfat/: cache.rs  cluster.rs  dir.rs  ebpb.rs  entry.rs  error.rs  fat.rs  file.rs  metadata.rs  mod.rs  vfat.rs
lib/kernel_api/: Cargo.toml
lib/kernel_api/src/: lib.rs  syscall.rs
lib/pi/: Cargo.toml
lib/pi/src/: common.rs  gpio.rs  interrupt.rs  lib.rs  local_interrupt.rs  timer.rs  uart.rs
lib/pi/src/atags/: atag.rs  mod.rs  raw.rs
lib/shim/: Cargo.toml
lib/shim/src/: lib.rs  macros.rs  no_std.rs  std.rs  tests.rs
lib/shim/src/no_std/: ffi.rs  path.rs
lib/shim/src/no_std/ffi/: os_str_bytes.rs
lib/stack-vec/: Cargo.toml
lib/stack-vec/src/: lib.rs  tests.rs
lib/ttywrite/: Cargo.toml  test.sh
lib/ttywrite/src/: main.rs  parsers.rs
lib/volatile/: Cargo.toml
lib/volatile/src/: lib.rs  macros.rs  traits.rs
lib/xmodem/: Cargo.toml
lib/xmodem/src/: lib.rs  progress.rs  read_ext.rs  tests.rs
tut/0-rustlings/: info.toml  rustlings
tut/0-rustlings/exercises/conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs  using_as.rs
tut/0-rustlings/exercises/cs140e/: borrow-1.rs  borrow-2.rs  builder.rs  const.rs  derive.rs  expressions.rs  feature-1.rs  io-read-write.rs  lifetimes-1.rs  lifetimes-2.rs  lifetimes-3.rs  lifetimes-4.rs  mutability-1.rs  mutability-2.rs  mutability-3.rs  mutability-4.rs  pattern-match-1.rs  privacy.rs  semi.rs  trait-impl.rs  trait-namespace.rs  try.rs  ufcs.rs
tut/0-rustlings/exercises/iterators/: iterators2.rs
tut/1-blinky/: .gitignore
tut/1-blinky/phase3/: .gitignore  Makefile  blinky.c  init.S  qemu.sh
tut/1-blinky/phase4/: Cargo.toml  Makefile
tut/1-blinky/phase4/.cargo/: layout.ld
tut/1-blinky/phase4/src/: init.rs  main.rs
tut/1-blinky/phase4/src/init/: init.s
tut/3-fs/: .gitignore
tut/4-spawn/: Makefile
tut/5-multicore/: .gitignore  Makefile
user/: .gitignore  build.sh  copy.sh
user/echo/: Cargo.toml
user/echo/src/: main.rs
user/fib/: Cargo.toml  Makefile
user/fib/.cargo/: layout.ld
user/fib/src/: cr0.rs  main.rs
user/sleep/: .cargo  Cargo.toml  Makefile
user/sleep/.cargo/: config
user/sleep/src/: main.rs
