[package]
name = "ttywrite"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>"
]
edition = "2018"

[dependencies]
structopt = "0.1.0"
structopt-derive = "0.1.0"
serial = "0.4"
xmodem = { path = "../xmodem/" }
